generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "linux-arm64-openssl-1.1.x", "darwin-arm64", "debian-openssl-1.1.x"]
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider          = "postgresql"
  url               = env("DATABASE_URL")
  shadowDatabaseUrl = env("SHADOW_DATABASE_URL")
}

model User {
  id        Int      @id @default(autoincrement())
  email     String   @unique
  name      String?
  sessions   Session[]
}

model Session {
  id        Int       @id @default(autoincrement())
  token     String
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  userId    Int       
  user      User      @relation(fields: [userId], references: [id])
  messages  Message[]
}

model Message {
  id        Int      @id @default(autoincrement())
  role      String
  content   String
  session   Session  @relation(fields: [sessionId], references: [id])
  sessionId Int
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
