//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  name String
  sessions Session [not null]
}

Table Session {
  id Int [pk, increment]
  token String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId Int [not null]
  user User [not null]
  messages Message [not null]
}

Table Message {
  id Int [pk, increment]
  role String [not null]
  content String [not null]
  session Session [not null]
  sessionId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Ref: Session.userId > User.id

Ref: Message.sessionId > Session.id